; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_mqtt.c_socket_connect.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_mqtt.c_socket_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.espconn = type { i64 }
%struct.TYPE_2__ = type { i32, i64, i32, i32 }

@.str = private unnamed_addr constant [23 x i8] c"enter socket_connect.\0A\00", align 1
@ESPCONN_CONN = common dso_local global i32 0, align 4
@ESPCONN_ARG = common dso_local global i32 0, align 4
@MQTT_CONNECT_TIMEOUT = common dso_local global i32 0, align 4
@MQTT_INIT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [22 x i8] c"leave socket_connect\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.espconn*)* @socket_connect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @socket_connect(%struct.espconn* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.espconn*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_2__*, align 8
  store %struct.espconn* %0, %struct.espconn** %3, align 8
  %6 = call i32 @NODE_DBG(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %7 = load %struct.espconn*, %struct.espconn** %3, align 8
  %8 = icmp eq %struct.espconn* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @ESPCONN_CONN, align 4
  store i32 %10, i32* %2, align 4
  br label %34

11:                                               ; preds = %1
  %12 = load %struct.espconn*, %struct.espconn** %3, align 8
  %13 = getelementptr inbounds %struct.espconn, %struct.espconn* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %15, %struct.TYPE_2__** %5, align 8
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %17 = icmp eq %struct.TYPE_2__* %16, null
  br i1 %17, label %18, label %20

18:                                               ; preds = %11
  %19 = load i32, i32* @ESPCONN_ARG, align 4
  store i32 %19, i32* %2, align 4
  br label %34

20:                                               ; preds = %11
  %21 = load i32, i32* @MQTT_CONNECT_TIMEOUT, align 4
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 3
  store i32 %21, i32* %23, align 4
  %24 = load i32, i32* @MQTT_INIT, align 4
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 2
  store i32 %24, i32* %26, align 8
  %27 = load %struct.espconn*, %struct.espconn** %3, align 8
  %28 = call i32 @espconn_connect(%struct.espconn* %27)
  store i32 %28, i32* %4, align 4
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = call i32 @os_timer_arm(i32* %30, i32 1000, i32 1)
  %32 = call i32 @NODE_DBG(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %33 = load i32, i32* %4, align 4
  store i32 %33, i32* %2, align 4
  br label %34

34:                                               ; preds = %20, %18, %9
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i32 @NODE_DBG(i8*) #1

declare dso_local i32 @espconn_connect(%struct.espconn*) #1

declare dso_local i32 @os_timer_arm(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
